Fixed the product item layout to provide the proper spacing... Also added color to the nav bar.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body{
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-top: -0.5em;
+  margin-bottom: 1em;
+  background-color: rgba(211, 211, 211);
 }
 #nav-bar li{
   display: inline-block;
@@ -46,4 +49,23 @@ body{
   margin-top: -1.0em;
   grid-column: 2/3;
   /*border: blue 1px solid;*/
+}
+
+#product-class{
+  display: flex;
+  justify-content: space-between;
+  align-content: center; 
+  margin: 0 20em 0 20em;
+  
+}
+.item{
+  /*display: flex;*/
+  border: 1px solid black;
+  height: 15em;
+  
+  
+}
+item p{
+  text-align: center;
+  word-wrap: break-word;
 }
